tests/test_enum/bad/output/duplicate_case.catala_en.A.Interpret
[ERROR] The constructor Case3 has been matched twice:

  --> tests/test_enum/bad/duplicate_case.catala_en
   | 
18 |     -- Case3 : true
   |                ^^^^
   + Article

  --> tests/test_enum/bad/duplicate_case.catala_en
   | 
17 |     -- Case3 : false
   |                ^^^^^
   + Article
